@@ -43,6 +43,9 @@
   <string id="30015">TORked</string>
   <string id="30215">Star Wars: The Old Republic podcast that goes in-depth into TOR updates and features on a weekly basis.</string>
 
+  <string id="30016">Unfilter</string>
+  <string id="30216">We're living in historic times. Don't waste it on TV. Unplug from the distractions and propaganda, and unfilter your life!</string>
+
   <!-- Settings -->
   <string id="30100">General</string>	
 	<string id="30101">Video Quality</string>
